bin_PROGRAMS	=	bosh
bosh_SOURCES	=	bosh.c bosh.h \
			objects.c objects.h \
			system.c system.h \
			ui.c ui.h \
			rc.c rc.h \
			misc.c misc.h \
			list.c list.h \
			stray.c stray.h \
			trie.c trie.h \
			cmd.c cmd.h \
			cmd_general.c cmd_general.h \
EXTRA_DIST	=	bosh.1 \
			configs/b*
man_MANS	=	bosh.1
